feat: 定义一批新命令来表达简写

--- a/DictionaryOfNewspeak.tex
+++ b/DictionaryOfNewspeak.tex
@@ -24,6 +24,11 @@
 \newcommand{\adv}{\textit{adv.}}
 \newcommand{\anyword}{\textit{anyword.}}
 
+\newcommand{\ingsoc}{英格兰社会主义党}
+\newcommand{\bb}{老大哥(\textit{Big Brother})}
+\newcommand{\oceania}{大洋国(\textit{Oceania})}
+\newcommand{\gold}{果尔德施坦因\footnote{党的叛徒！革命的背叛者！}(\textit{Goldstein})}
+
 \begin{document}
     \maketitle
 
