feat: 政治内添加更多内容

--- a/DictionaryOfNewspeak.tex
+++ b/DictionaryOfNewspeak.tex
@@ -39,7 +39,9 @@
             \section*{In Chinese}
                 \textbf{本项目是小说《一九八四》的同人作品，与现实无关！}
 
-                《一九八四》（Nineteen Eighty-Four）是英国作家乔治·奥威尔于1949年发表的长篇政治小说。
+                《一九八四》（Nineteen Eighty-Four）是英国作家乔治·奥威尔于1949年发表的长篇政治小说。是批判法西斯主义、帝国主义、极权主义的经典之作，是在包括中国在内的全世界多个国家合法出版的架空历史小说。
+
+                本文中所涉及的相关词汇，例如“党”、“革命”等词汇，\textbf{并非暗示、影射、指代现实中的任何组织或事件}，对这些词汇的理解，应当放在《一九八四》小说的语境中来理解。例如，本文中的“党”指的是小说中打着社会主义旗号的反动党派“英格兰社会主义党”，“革命”指的是“英格兰社会主义党”为了建立极权体制所发动的没有人民支持的政变，其他词汇同上。
 
                 此书在中华人民共和国、美利坚合众国、大不列颠及北爱尔兰联合王国、法兰西共和国、俄罗斯联邦及多个国家和地区均已合法出版。如果您的所在的国家或地区不允许《一九八四》的出版，则您应该不应当查看本页面。
 
