feat: 新增B类词，重构部分排版

--- a/DictionaryOfNewspeak.tex
+++ b/DictionaryOfNewspeak.tex
@@ -83,6 +83,12 @@
         
     \part{正文}
         \chapter{单词}
+            新话的第一大语法是不同词性的词几乎可以完全混用。它的任意一个词，既可以用作动词，也可以用作名词、形容词或者副词，从原则来说，即使像“if”（如果）“when”（当……的时候）这样非常抽象的名词也不例外。
+
+            此外，每个词只要加上前缀“un”就可以表示否定，加上前缀“plus”就表示强调，进一步强调就加“doubleplus”，原则上新话每一个词都是这样。
+
+            除此之外，每个词只要加上后缀“er”就可以表示某种东西的使用者、拥有者、信仰者。例如crimethinker最后都会在Miniluv被\bb 的仁爱所感动，最终被改造为goodthinker，所有的oldthinker最终都会在了解了\bb 的伟大思想后成为newthinker和goodthinker。
+
             \section{A类词}
                 \textit{
                     组成A类词的，是日常事务中必须使用的那些词，比如饮食、工作、穿衣、上楼、下楼、驾车、种花、烹饪等等。它几乎全部都是我们已经使用过的那些词，如打、跑、狗、树、糖、房屋、田野等等，但与今天我们所用的英语相比，它的数目非常之小，而意义又受到严格得多的限定。凡是意思上模棱两可、有细微差别的地方，都一概删除。倘若这样，那么一个A类词就只是一种独立的喉音，表示我们都明白知道的一个概念。这样，想把A类词用到文学上，用到政治和哲学的讨论中，就完全不可能了。它所要表达的，只是简单、有明确意图的思想，通常都是涉及具体物体或者身体的动作。
@@ -90,9 +96,7 @@
 
                 \rightline{—— 乔治·奥威尔《1984》}
 
-                新话的第一大语法是不同词性的词几乎可以完全混用。它的任意一个词，既可以用作动词，也可以用作名词、形容词或者副词，从原则来说，即使像“if”（如果）“when”（当……的时候）这样非常抽象的名词也不例外。
-
-                此外，每个词只要加上前缀“un”就可以表示否定，加上前缀“plus”就表示强调，进一步强调就加“doubleplus”，原则上新话每一个词都是这样。
+                A类词是用于描述我们伟大国家公民的日常生活而创造的，我们对其中的大部分词进行了适当的修改，以使其方便使用。
 
                 \begin{multicols}{2}
                     \begin{word}{when}{当 \dots 时}
@@ -129,4 +133,33 @@
                 \end{multicols}
 
                 新话语法的第二个显著特征是它的规则性。几乎所有词形的变化都遵循同样的规则。这样，每个动词的过去式和过去分词就都是以“ed”结尾，“steal”的过去式就成了“stealed”，“think”的过去式是“thinked”，新话中其他的词也是一样。
+            
+            \section{B类词}
+                B类词是为了宣传\ingsoc 和\bb 的伟大思想而专门设计和创造的词。在\os 中表达它们往往需要冗长的语言，\ingsoc 在\bb 的领导下专门设计和创造了这些词，用来方便\ingsoc 员和广大的无产阶级群众使用。
+
+                B类词都是复合词，它们由两个或两个以上的词，或者从几个词中抽取一部分组成。
+
+                \begin{multicols}{2}
+                    \begin{word}{goodthink}{好思想}
+                        指的是\ingsoc 和\bb 的伟大思想，是每个\oceania 应当学习、维护、践行的思想。
+                    \end{word}
+                    
+                    \begin{word}{crimethink}{坏思想；思想犯罪}
+                        指的是\gold 宣传的反动思想，每个\oceania 公民发现此类思想应当立即报告爱部和思想警察！
+                    \end{word}
+
+                    \begin{word}{oldthink}{老思想}
+                        形成于革命以前的思想，他们的思想往往不够纯洁，但已经很贴近goodthink，不应当以crimethink对待。
+                    \end{word}
+
+                    \begin{word}{thinkpol}{思想警察}\end{word}
+
+                    \begin{word}{Minitrue}{真理部}\end{word}
+
+                    \begin{word}{Miniluv}{友爱部}\end{word}
+
+                    \begin{word}{Minipax}{和平部}\end{word}
+
+                    \begin{word}{Miniprod}{富裕部}\end{word}
+                \end{multicols}
 \end{document}
