--- a/DictionaryOfNewspeak.tex
+++ b/DictionaryOfNewspeak.tex
@@ -2,7 +2,7 @@
 \usepackage{multicol}
 
 \title{新话词典}
-\subtitle{战争即和平，自由即奴役、无知即力量}
+\subtitle{战争即和平，自由即奴役，无知即力量}
 \date{1964年1月1日}
 \author{记司}
 \institute{真部}
