feat: 使用方正字体

--- a/DictionaryOfNewspeak.tex
+++ b/DictionaryOfNewspeak.tex
@@ -1,4 +1,4 @@
-\documentclass[lang=cn, color=black]{elegantbook}
+\documentclass[lang=cn, color=black, chinesefont=founder]{elegantbook}
 \usepackage{multicol}
 
 \title{新话词典}
